--- a/hotels.html
+++ b/hotels.html
@@ -42,11 +42,10 @@
     </header>
 <!-- Хлебные крошки -->
     <main class="main__hotels">
+      <div class="main__container">
       <div class="hotels__background">
       <header class="hotels__header">
-        <h1 class="hotels__header-title">
-          Гостиницы Седоны
-        </h1>
+        <h1 class="hotels__header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
           <li class="visually-hidden">
             <a class="breadcrumbs__link" href="index.html">
@@ -62,26 +61,26 @@
       </header>
 <!-- фильтры для поиска гостиницы -->
       <section class="hotels__search">
-        <h2 class="visually-hidden">Фильтры для поиска гостиницы</h2>
+        <h2 class="visually-hidden" hidden>Фильтры для поиска гостиницы</h2>
         <form class="hotels__form" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="hotels__form-fieldset">
-            <legend class="hotels__form-legend">Инфраструктура:</legend>
-            <ul class="hotels__form-list">
-              <li class="hotels__form-item">
+            <legend class="hotels__form-infrastructure">Инфраструктура:</legend>
+            <ul class="hotels__infrastructure-list">
+              <li class="hotels__infrastructure-item">
                 <label class="control">
                   <input class="visually-hidden control__input" type="checkbox" name="pool" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Бассейн</span>
                 </label>
               </li>
-              <li class="hotels__form-item">
+              <li class="hotels__infrastructure-item">
                 <label class="control">
                   <input class="visually-hidden control__input" type="checkbox" name="parking" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Парковка</span>
                 </label>
               </li>
-              <li class="hotels__form-item">
+              <li class="hotels__infrastructure-item">
                 <label class="control">
                   <input class="visually-hidden control__input" type="checkbox" name="Wi-Fi">
                   <span class="control__mark"></span>
@@ -92,22 +91,22 @@
           </fieldset>
 
           <fieldset class="hotels__filter-group">
-            <legend class="hotels__filter-title">Тип жилья:</legend>
-            <ul class="hotels__filter-list">
-              <li class="hotels__filter-item">
+            <legend class="hotels__form-housing">Тип жилья:</legend>
+            <ul class="hotels__housing-list">
+              <li class="hotels__housing-item">
                 <label class="control">
                   <input class="visually-hidden control__input" type="radio" name="type-hotels" value="hotel" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Гостинница</span>
                 </label>
-                <li class="hotels__filter-item">
+                <li class="hotels__housing-item">
                   <label class="control">
                     <input class="visually-hidden control__input" type="radio" name="type-hotels" value="motel">
                     <span class="control__mark"></span>
                     <span class="control__label">Мотель</span>
                   </label>
               </li>
-              <li class="hotels__filter-item">
+              <li class="hotels__housing-item">
                 <label class="control">
                   <input class="visually-hidden control__input" type="radio" name="type-hotels" value="apartments">
                   <span class="control__mark"></span>
@@ -117,47 +116,59 @@
             </ul>
           </fieldset>
 
-          <fieldset class="hotels__filter-group">
-            <legend class="hotels__filter-title">Стоимость, ₽:</legend>
+          <fieldset class="hotels__filter-price">
+            <legend class="hotels__form-price">Стоимость, ₽:</legend>
             <button class="range__toggle toggle__min" type="button">
               <span class="visually-hidden">Изменить минимальную цену</span>
             </button>
             <button class="range__toggle toggle__max" type="button">
               <span class="visually-hidden">Изменить максимальную цену</span>
             </button>
-            <label class="hotels__filter-input">
+            <label class="hotels__price-input">
              от<input class="hotels__filter-input" type="number" name="min-price" value="0">
           </label>
-          <label class="hotels__filter-input">
+          <label class="hotels__price-input">
             до<input class="hotels__filter-input" type="number" name="max-price" value="9000">
          </label>
           </fieldset>
+          <div class="hotels__buttoms">
         <button class="button__apply" type="submit">Применить</button>
         <button class="button__reset" type="reset">Сбросить</button>
+      </div>
         </form>
       </div>
 
-        <p class="hotels__found">Найдено гостиниц: 38</p>
-
+        <div class="hotels__found-container">
+       <p class="hotels__found">Найдено гостиниц: 38</p>
         <form class="sorting__type">
-          <label class="visually-hidden" for="sorting">Сортировка</label>
+          <label class="visually-hidden" for="sorting" hidden>Сортировка</label>
           <select class="select__control" id="sorting" name="sorting">
             <option value="cheap">Сначала дешёвое</option>
             <option value="expensive">Сначала дорогое</option>
             <option value="popular">Сначала популярное</option>
           </select>
-          <button class="visually-hidden" type="submit">Отсортировать</button>
+          <!-- <button class="visually-hidden" type="submit">Отсортировать</button> -->
         </form>
-        <a href="#" class="buttom buttom__tile">
+        <ul class="buttons__sorting">
+          <li class="buttons__sorting-item">
+        <a href="#" class="button__tile-link">
           <span class="visually-hidden">Показать карточки</span>
         </a>
-        <a href="#" class="buttom buttom__slide">
+      </li>
+      <li class="buttons__sorting-item">
+        <a href="#" class="button__slide-link">
           <span class="visually-hidden">Показать слайды</span>
         </a>
-        <a href="#" class="buttom buttom__list">
+      </li>
+      <li class="buttons__sorting-item">
+        <a href="#" class="button__list-link">
           <span class="visually-hidden">Показать список</span>
         </a>
+      </li>
+      </ul>
+      </div>
 <!-- каталог -->
+      <div class="hotels__catalog">
         <ul class="hotels__list">
 
           <li class="hotels__card">
@@ -217,10 +228,13 @@
           </li>
         </ul>
 
-        <button class="show-more">Показать еще</button>
+
+        <button class="botton__show-more">Загрузить еще</button>
+      </div>
 
         <!-- переключение страниц -->
-        <ul class="pagination">
+        <div class="pagination__container">
+        <ul class="pagination__list">
           <li class="pagination__item">
             <a class="pagination__link pagination__current" href="#">1</a>
           </li>
@@ -248,55 +262,62 @@
             <option value="8">8</option>
             <option value="12">12</option>
           </select>
-          <button class="visually-hidden" type="submit">Показать</button>
+          <!-- <button class="visually-hidden" type="submit">Показать</button> -->
         </form>
       </section>
+    </div>
 
 
      <!-- Рассылка -->
      <section class="mailing__hotels">
       <form class="mailing__form">
         <h3 class="mailing__title-hotels">Подпишитесь на рассылку</h3>
-        <p class="mailing__description-hotels">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <p class="mailing__description-hotels">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <div class="mailing__input-container">
           <input type="text" name="e-mail" placeholder="Ваш e-mail" class="mailing__input">
           <button type="submit" class="mailing__button">подписаться</button>
+        </div>
       </form>
     </section>
+
+  </div>
   </main>
 
   <!-- footer -->
   <footer class="footer">
-    <section class="socials">
-      <h3 class="visually-hidden">Социальные сети</h3>
-      <ul class="social__list">
-        <li class="social__item">
-         <a class="button__twitter" href="https://twitter.com/htmlacademy_ru">
-           <span class="visually-hidden">Твиттер</span>
-         </a>
-        </li>
-        <li class="social__item">
-         <a class="button__facebook" href="https://www.facebook.com/htmlacademy">
-           <span class="visually-hidden">Фейсбук</span>
-         </a>
-        </li>
-        <li class="social__item">
-         <a class="button__youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
-           <span class="visually-hidden">Ютуб</span>
-         </a>
-        </li>
-      </ul>
-    </section>
+    <div class="footer__container">
+      <section class="socials">
+        <h3 class="visually-hidden" hidden>Социальные сети</h3>
+        <ul class="social__list">
+          <li class="social__item">
+           <a class="button__twitter" href="https://twitter.com/htmlacademy_ru">
+            <img src="images/twitter.svg" class="button__twitter" alt="Твиттер">
+           </a>
+          </li>
+          <li class="social__item">
+           <a class="button__facebook" href="https://www.facebook.com/htmlacademy">
+            <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук">
+           </a>
+          </li>
+          <li class="social__item">
+           <a class="button__youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
+            <img src="images/youtube.svg" class="button__youtube" alt="Ютуб">
+           </a>
+          </li>
+        </ul>
+      </section>
 
     <section class="telephone">
-     <h3 class="visually-hidden">Телефон</h3>
+     <h3 class="visually-hidden" hidden>Телефон</h3>
      <a href="tel:+78128121212" class="telephone">+7 (812) 812-12-12</a>
    </section>
    <section class="academy">
-     <h3 class="visually-hidden">Контакты академии</h3>
+     <h3 class="visually-hidden" hidden>Контакты академии</h3>
      <a href="https://htmlacademy.ru/" class="academy__link">
      <img class="academy__logo" src="images/logo_academy.svg" alt="logo-academy">
      </a>
    </section>
+  </div>
   </footer>
 
    </body>
