--- a/hotels.html
+++ b/hotels.html
@@ -8,6 +8,7 @@
   <body>
     <!-- Меню -->
     <header class="header">
+      <div class="header__container">
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
@@ -39,6 +40,7 @@
           </li>
         </ul>
       </nav>
+    </div>
     </header>
 <!-- Хлебные крошки -->
     <main class="main__hotels">
