добавила div для страницы, убрала лишние

--- a/hotels.html
+++ b/hotels.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
+    <div class="page__container">
     <!-- Меню -->
     <header class="header">
-      <div class="header__container">
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
@@ -21,7 +21,9 @@
             <a class="navigation__link" href="hotels.html">Гостинницы</a>
           </li>
         </ul>
+        <a class="logo__sedona" href="index.html">
         <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
+      </a>
         <ul class="navigation-list navigation-user" >
           <li class="navigation__item">
             <a class="navigation__link" href="#">
@@ -40,7 +42,6 @@
           </li>
         </ul>
       </nav>
-    </div>
     </header>
 <!-- Хлебные крошки -->
     <main class="main__hotels">
@@ -321,6 +322,7 @@
    </section>
   </div>
   </footer>
+     </div>
 
    </body>
 </html>
