--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
+    <div class="page__container">
 
     <!-- Меню -->
     <header class="header">
-      <div class="header__container">
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
@@ -41,7 +41,6 @@
           </li>
         </ul>
       </nav>
-    </div>
     </header>
   <!-- первый экран -->
   <main class="main__index">
@@ -69,26 +68,17 @@
             </div>
 
             <ul class="extra__list">
-                <li class="extra__item">
-                  <div class="extra__home-container">
-                    <div class="extra__home-img"></div>
+                <li class="extra__home">
                   <h4 class="extra__item-home">Жильё</h4>
                   <p class="extra__item-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
-                </div>
                 </li>
-                <li class="extra__item">
-                  <div class="extra__eat-container">
-                  <div class="extra__eat-img"></div>
+                <li class="extra__eat">
                   <h4 class="extra__item-eat">Еда</h4>
                   <p class="extra__item-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
-                </div>
                 </li>
-                <li class="extra__item">
-                  <div class="extra__souvenirs-container">
-                  <div class="extra__souvenirs-img"></div>
+                <li class="extra__souvenirs">
                   <h4 class="extra__item-souvenirs">Сувениры</h4>
                   <p class="extra__item-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
-                </div>
                 </li>
 
               </ul>
@@ -161,19 +151,21 @@
       <section class="socials">
         <h3 class="visually-hidden" hidden>Социальные сети</h3>
         <ul class="social__list">
-          <li class="social__item">
+          <li class="button__twitter">
            <a class="button__twitter" href="https://twitter.com/htmlacademy_ru">
-            <img src="images/twitter.svg" class="button__twitter" alt="Твиттер">
+            <span class="visually-hidden">Твиттер</span>
            </a>
           </li>
-          <li class="social__item">
+          <li class="button__facebook">
            <a class="button__facebook" href="https://www.facebook.com/htmlacademy">
-            <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук">
+            <span class="visually-hidden">Фейсбук</span>
+            <!-- <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук"> -->
            </a>
           </li>
-          <li class="social__item">
+          <li class="button__youtube">
            <a class="button__youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
-            <img src="images/youtube.svg" class="button__youtube" alt="Ютуб">
+            <span class="visually-hidden">Ютуб</span>
+            <!-- <img src="images/youtube.svg" class="button__youtube" alt="Ютуб"> -->
            </a>
           </li>
         </ul>
@@ -191,7 +183,7 @@
      </section>
     </div>
     </footer>
-
+  </div>
   </body>
 
 </html>
