Микросетки на флексах для всех страниц

--- a/hotels.html
+++ b/hotels.html
@@ -51,14 +51,10 @@
         <h1 class="hotels__header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
           <li class="visually-hidden">
-            <a class="breadcrumbs__link" href="index.html">
-              Главная
-            </a>
+            <a class="breadcrumbs__link" href="index.html">Главная</a>
           </li>
           <li class="breadcrumbs__item">
-            <a class="breadcrumbs__link" href="hotels.html">
-              Гостиницы
-            </a>
+            <a class="breadcrumbs__link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
       </header>
@@ -258,14 +254,12 @@
           </li>
         </ul>
 
-        <form class="pagination__select">
+        <form class="pagination__form">
           <label class="pagination__select" for="sorting">Гостиниц на странице</label>
           <select class="pagination__select" name="pagination">
             <option value="4">4</option>
-            <option value="8">8</option>
-            <option value="12">12</option>
           </select>
-          <!-- <button class="visually-hidden" type="submit">Показать</button> -->
+
         </form>
       </section>
     </div>
@@ -292,19 +286,21 @@
       <section class="socials">
         <h3 class="visually-hidden" hidden>Социальные сети</h3>
         <ul class="social__list">
-          <li class="social__item">
-           <a class="button__twitter" href="https://twitter.com/htmlacademy_ru">
-            <img src="images/twitter.svg" class="button__twitter" alt="Твиттер">
+          <li class="button__twitter">
+           <a class="twitter" href="https://twitter.com/htmlacademy_ru">
+            <span class="visually-hidden">Твиттер</span>
            </a>
           </li>
-          <li class="social__item">
-           <a class="button__facebook" href="https://www.facebook.com/htmlacademy">
-            <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук">
+          <li class="button__facebook">
+           <a class="facebook" href="https://www.facebook.com/htmlacademy">
+            <span class="visually-hidden">Фейсбук</span>
+            <!-- <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук"> -->
            </a>
           </li>
-          <li class="social__item">
-           <a class="button__youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
-            <img src="images/youtube.svg" class="button__youtube" alt="Ютуб">
+          <li class="button__youtube">
+           <a class="youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
+            <span class="visually-hidden">Ютуб</span>
+            <!-- <img src="images/youtube.svg" class="button__youtube" alt="Ютуб"> -->
            </a>
           </li>
         </ul>
