--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <!-- Меню -->
     <header class="header">
+      <div class="page-footer">
       <nav class="navigation">
         <ul class="navigation__list">
           <li class="navigation__item">
@@ -22,7 +23,9 @@
             <a class="navigation__link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
+        <a class="logo__sedona" href="index.html">
         <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
+      </a>
         <ul class="navigation-list navigation-user" >
           <li class="navigation__item">
             <a class="navigation__link" href="#">
@@ -41,6 +44,7 @@
           </li>
         </ul>
       </nav>
+    </div>
     </header>
   <!-- первый экран -->
   <main class="main__index">
@@ -51,10 +55,10 @@
         <h1 class="welcome__title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h1>
         <p class="welcome__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
 
+
 <!-- преимущества -->
       <section class="advantage">
         <h2 class="visually-hidden" hidden>Преимущества</h2>
-
         <ol class="advantage__list">
           <li class="advantage__item">
             <div class="advantage__container-city">
@@ -152,18 +156,18 @@
         <h3 class="visually-hidden" hidden>Социальные сети</h3>
         <ul class="social__list">
           <li class="button__twitter">
-           <a class="button__twitter" href="https://twitter.com/htmlacademy_ru">
+           <a class="twitter" href="https://twitter.com/htmlacademy_ru">
             <span class="visually-hidden">Твиттер</span>
            </a>
           </li>
           <li class="button__facebook">
-           <a class="button__facebook" href="https://www.facebook.com/htmlacademy">
+           <a class="facebook" href="https://www.facebook.com/htmlacademy">
             <span class="visually-hidden">Фейсбук</span>
             <!-- <img src="images/facebook.svg" class="button__facebook" alt="Фейсбук"> -->
            </a>
           </li>
           <li class="button__youtube">
-           <a class="button__youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
+           <a class="youtube" href="https://www.youtube.com/c/HTMLAcademyRUS">
             <span class="visually-hidden">Ютуб</span>
             <!-- <img src="images/youtube.svg" class="button__youtube" alt="Ютуб"> -->
            </a>
@@ -175,6 +179,7 @@
        <h3 class="visually-hidden" hidden>Телефон</h3>
        <a href="tel:+78128121212" class="telephone">+7 (812) 812-12-12</a>
      </section>
+
      <section class="academy">
        <h3 class="visually-hidden" hidden>Контакты академии</h3>
        <a href="https://htmlacademy.ru/" class="academy__link">
