Микросетки на флексах для всех страниц (исправления замечаний наставника)

--- a/hotels.html
+++ b/hotels.html
@@ -35,10 +35,8 @@
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">
-              <span class="navigation__button">Хочу сюда</span>
-            </a>
+          <li class="navigation__item-user">
+            <a class="navigation__link-button" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -50,7 +48,7 @@
       <header class="hotels__header">
         <h1 class="hotels__header-title">Гостиницы Седоны</h1>
         <ul class="breadcrumbs">
-          <li class="visually-hidden">
+          <li class="breadcrumbs__item">
             <a class="breadcrumbs__link" href="index.html">Главная</a>
           </li>
           <li class="breadcrumbs__item">
