--- a/index.html
+++ b/index.html
@@ -27,20 +27,18 @@
         <img src="images/sedona.svg" class="logo" alt="Логотип Седона">
       </a>
         <ul class="navigation-list navigation-user" >
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">
+          <li class="navigation__item-user">
+            <a class="navigation__link-user" href="#">
               <span class="visually-hidden">Поиск</span>
             </a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">
+          <li class="navigation__item-user">
+            <a class="navigation__link-user" href="#">
               <span class="visually-hidden">Избранное</span>
             </a>
           </li>
-          <li class="navigation__item">
-            <a class="navigation__link" href="#">
-              <span class="navigation__button">Хочу сюда</span>
-            </a>
+          <li class="navigation__item-user">
+            <a class="navigation__link-button" href="#">Хочу сюда</a>
           </li>
         </ul>
       </nav>
@@ -52,8 +50,10 @@
       <div class="welcome">
         <img src="images/welcome.svg" alt="Добро пожаловать в Седону" class="welcome__img">
       </div>
+      <div class="welcome__text">
         <h1 class="welcome__title">Седона — небольшой городок в Аризоне, <br>заслуживающий большего!</h1>
         <p class="welcome__description">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
+      </div>
 
 
 <!-- преимущества -->
@@ -101,26 +101,20 @@
           </li>
 
 
-          <li class="advantage__item">
-            <div class="advantage__lions">
+          <li class="advantage__item advantage__lions">
             <h3 class="advantage__item-title">Небольшая площадь</h3>
               <p class="advantage__item-number">— №3 —</p>
               <p class="advantage__item-description">Все достопримечательности<br> находятся очень близко</p>
-            </div>
           </li>
-          <li class="advantage__item">
-            <div class="advantage__road">
+          <li class="advantage__item advantage__road">
             <h3 class="advantage__item-title">Красивая дорога</h3>
               <p class="advantage__item-number">— №4 —</p>
               <p class="advantage__item-description">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
-            </div>
           </li>
-          <li class="advantage__item">
-            <div class="advantage__tourists">
+          <li class="advantage__item advantage__tourists">
             <h3 class="advantage__item-title">Мало туристов</h3>
               <p class="advantage__item-number">— №5 —</p>
               <p class="advantage__item-description">Большинство едет в Гранд<br> Каньон и толпится там</p>
-            </div>
           </li>
 
         </ol>
